@@ -211,6 +211,9 @@ Changed in ATK 5.6.1
 * tbsooo converted apostrophe (&apos; -> \') from XML file for TBS functions
   causes corrupt document: convert it back to &apos; in documentwriter [Jeroen]
 * Fixed problem with tabs which caused 1:1 relation tabs not to be shown. [Peter]
+* Fixed unnecessary instantiation of 1:1 relation destinations. [Peter]
+* Translation debugging is now by default disabled. Use 
+  $config_debug_translations to enable them. [Peter]
 
 Changed in ATK 5.6
 ------------------
